--- a/views/popups/alert.html
+++ b/views/popups/alert.html
@@ -1,4 +1,8 @@
 <!--
+Cette popup est utilisable pour les alertes et les messages
+-->
+
+<!--
 Masque transparent
 -->
 <div class="popup-masque" data-ng-click="cancel()"></div>
