--- a/views/popups/change-date.html
+++ b/views/popups/change-date.html
@@ -1,4 +1,9 @@
 <!--
+Cette popup est utilisée uniquement dans la page de détail d'une RDV. Elle permet
+de changer la date et l'heure du RDV.
+-->
+
+<!--
 Masque transparent
 -->
 <div class="popup-masque" data-ng-click="cancel()"></div>
